// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Property /> should render only title 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Звонки на все номера России
                </Header>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500 ₽
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render title and description 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Интернет на все сервисы
                </Header>
                <div
                  className="mfui-property__desc"
                  key="0"
                >
                  <PropertyDescription
                    classes={
                      Object {
                        "open": undefined,
                        "toggle": undefined,
                      }
                    }
                    value="Boom, Yandex.Музыка, Zvooq, ВКонтакте Музыка"
                  />
                </div>
              </div>
              <div
                className="mfui-property__value-wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render title and hidden description 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Музыкальные сервисы
                </Header>
                <div
                  className="mfui-property__desc"
                  key="0"
                >
                  <PropertyDescription
                    classes={
                      Object {
                        "open": undefined,
                        "toggle": undefined,
                      }
                    }
                    isCollapsible={true}
                    value="Звонки на местные городские номера, когда вы находитесь дома, оплачиваются отдельно."
                  />
                </div>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500 ₽
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render title in several row 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Детализация в салонах МегаФона
                </Header>
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="1"
                >
                  Оплачивается каждый день заказанной детализации.
                </Header>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  2ГБ
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render with 100% width 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      all="12"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Звонки на все номера России
                </Header>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500 ₽
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render with badge 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__badge-wrapper"
        >
          <span
            className="mfui-property__badge"
          >
            Акция
          </span>
        </div>
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Звонки на все номера России
                </Header>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500 ₽
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render with border bottom 1`] = `
<div
  className="mfui-property mfui-property_border-bottom"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Звонки на все номера России
                </Header>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500 ₽
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render with custom class names 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  className="title-custom-class"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Доп звонки
                </Header>
                <div
                  className="mfui-property__desc"
                  key="0"
                >
                  <PropertyDescription
                    classes={
                      Object {
                        "open": "opened-description-custom-class",
                        "toggle": "toggle-description-custom-class",
                      }
                    }
                    isCollapsible={true}
                    value="Звонки на местные городские номера, когда вы находитесь дома, оплачиваются отдельно."
                  />
                </div>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500Р
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render with data attribute 1`] = `
<div
  className="mfui-property"
  data-test="value"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Звонки на все номера России
                </Header>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500 ₽
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render with icon 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  <div
                    className="mfui-property__icon"
                  >
                    <test-file-stub
                      style={
                        Object {
                          "display": "block",
                          "fill": "#00B956",
                        }
                      }
                    />
                  </div>
                  Интернет на все сервисы
                </Header>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500 ₽
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<Property /> should render with several descriptions 1`] = `
<div
  className="mfui-property"
>
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-property__wrapper"
      >
        <div
          className="mfui-property__content"
        >
          <div
            className="mfui-property__items-wrapper"
          >
            <div
              className="mfui-property__item"
              key="0"
            >
              <div
                className="mfui-property__inner"
              >
                <Header
                  as="h5"
                  color="black"
                  hAlign="inherit"
                  key="0"
                >
                  Доп звонки
                </Header>
                <div
                  className="mfui-property__desc"
                  key="0"
                >
                  <PropertyDescription
                    classes={
                      Object {
                        "open": undefined,
                        "toggle": undefined,
                      }
                    }
                    value="После израсходования пакета минут звонки на номера МегаФона России предоставляются безлимитно."
                  />
                </div>
                <div
                  className="mfui-property__desc"
                  key="1"
                >
                  <PropertyDescription
                    classes={
                      Object {
                        "open": undefined,
                        "toggle": undefined,
                      }
                    }
                    isCollapsible={true}
                    value="Звонки на местные городские номера, когда вы находитесь дома, оплачиваются отдельно."
                  />
                </div>
              </div>
              <div
                className="mfui-property__value-wrapper"
              >
                <span
                  className="mfui-property__value"
                >
                  500Р
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;
